<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tl="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:gravity="center">
        <TextView
            android:id="@+id/tv_facebook"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:paddingRight="30dp"
            android:text="@string/tv_registry"
            android:textColor="#000000"
            android:textSize="18sp" />
    </android.support.v7.widget.Toolbar>

    <!--<LinearLayout-->
        <!--android:id="@+id/button_facebook_login"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginTop="10dp"-->
        <!--android:background="@drawable/custom_background_button_color"-->
        <!--android:orientation="horizontal">-->

        <!--<ImageView-->
            <!--android:id="@+id/img_back"-->
            <!--android:layout_width="24dp"-->
            <!--android:layout_height="24dp"-->
            <!--android:layout_gravity="center_vertical"-->
            <!--android:layout_marginLeft="20dp"-->
            <!--android:adjustViewBounds="true"-->
            <!--android:src="@drawable/ic_back" />-->


    <!--</LinearLayout>-->

    <!--Header-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:background="#EEEEEE">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Vui lòng nhập mật khẩu"
            android:layout_marginLeft="10dp"
            android:textColor="#999999"
            android:textSize="15sp" />
    </LinearLayout>

    <!--Country code-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="Quốc gia/Khu vực"
            android:textColor="#000000"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/sn_country_name"
            android:layout_width="115dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="5dp"></Spinner>

        <TextView
            android:id="@+id/tv_line_1_in_country_code"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/sn_country_name"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:background="#999999" />

        <TextView
            android:id="@+id/tv_contry_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/field_phone_number"
            android:layout_alignBottom="@+id/field_phone_number"
            android:layout_alignStart="@+id/tv_line_1_in_country_code"
            android:layout_marginStart="17dp"
            android:text="+84"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_line_2_in_country_code"
            android:layout_width="1dp"
            android:layout_height="40dp"
            android:layout_below="@+id/tv_line_1_in_country_code"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/tv_contry_code"
            android:background="#999999" />

        <EditText
            android:id="@+id/field_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_line_1_in_country_code"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_toEndOf="@+id/tv_line_2_in_country_code"
            android:layout_toStartOf="@+id/button_start_verification"
            android:hint="SĐT"
            android:inputType="phone" />

        <Button
            android:id="@+id/button_start_verification"
            android:layout_width="65dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/tv_line_1_in_country_code"
            android:layout_marginEnd="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_button_send_verify_code"
            android:text="@string/start_phone_auth"
            android:textAllCaps="false" />

        <TextView
            android:id="@+id/tv_line_3_in_country_code"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/field_phone_number"
            android:layout_marginLeft="10dp"
            android:background="#999999" />

        <EditText
            android:id="@+id/field_verification_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:layout_below="@+id/tv_line_3_in_country_code"
            android:hint="@string/hint_verification_code"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:inputType="number" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp"
        android:weightSum="2">

        <!--<EditText-->
        <!--android:id="@+id/field_verification_code"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_weight="1.0"-->
        <!--android:hint="@string/hint_verification_code"-->
        <!--android:inputType="number" />-->

        <Button
            android:id="@+id/button_verify_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:layout_marginRight="5dp"
            android:background="@drawable/custom_button_send_verify_code"
            android:text="@string/verify_phone_auth" />

        <Button
            android:id="@+id/button_resend"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:layout_marginLeft="5dp"
            android:background="@drawable/custom_button_send_verify_code"
            android:text="@string/resend_phone_auth" />
    </LinearLayout>

    <!--<RelativeLayout-->
        <!--android:layout_width="fill_parent"-->
        <!--android:layout_height="0dp"-->
        <!--android:layout_alignParentStart="true"-->
        <!--android:layout_alignParentTop="true"-->
        <!--android:layout_marginTop="20dp"-->
        <!--android:layout_weight="1"-->
        <!--android:background="@color/grey_300"-->
        <!--android:gravity="center_vertical">-->

        <!--<LinearLayout-->
            <!--android:id="@+id/phone_auth_fields"-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="vertical"-->
            <!--android:paddingLeft="16dp"-->
            <!--android:paddingRight="16dp">-->

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:weightSum="2.0">-->

                <!--&lt;!&ndash;<EditText&ndash;&gt;-->
                <!--&lt;!&ndash;android:id="@+id/field_phone_number"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_width="0dp"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
                <!--&lt;!&ndash;android:layout_weight="1.0"&ndash;&gt;-->
                <!--&lt;!&ndash;android:hint="@string/hint_phone_number"&ndash;&gt;-->
                <!--&lt;!&ndash;android:inputType="phone" />&ndash;&gt;-->

                <!--&lt;!&ndash;<Button&ndash;&gt;-->
                    <!--&lt;!&ndash;android:id="@+id/button_start_verification"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_width="0dp"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_weight="1.0"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:text="@string/start_phone_auth"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:theme="@style/ThemeOverlay.MyDarkButton" />&ndash;&gt;-->


            <!--</LinearLayout>-->

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="horizontal"-->
                <!--android:weightSum="3.0">-->

                <!--&lt;!&ndash;<EditText&ndash;&gt;-->
                    <!--&lt;!&ndash;android:id="@+id/field_verification_code"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_width="0dp"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_weight="1.0"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:hint="@string/hint_verification_code"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:inputType="number" />&ndash;&gt;-->

                <!--<Button-->
                    <!--android:id="@+id/button_verify_phone"-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="1.0"-->
                    <!--android:text="@string/verify_phone_auth"-->
                    <!--android:theme="@style/ThemeOverlay.MyDarkButton" />-->

                <!--<Button-->
                    <!--android:id="@+id/button_resend"-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_weight="1.0"-->
                    <!--android:text="@string/resend_phone_auth"-->
                    <!--android:theme="@style/ThemeOverlay.MyDarkButton" />-->
            <!--</LinearLayout>-->

        <!--</LinearLayout>-->

        <LinearLayout
            android:id="@+id/signed_in_buttons"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:visibility="gone"
            android:weightSum="1.0">

            <Button
                android:id="@+id/sign_out_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/sign_out"
                android:theme="@style/ThemeOverlay.MyDarkButton" />

        </LinearLayout>

    <!--</RelativeLayout>-->


</LinearLayout>
